--- a/style.css
+++ b/style.css
@@ -1,1 +1,2 @@
 body {font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}
+main-content { background-color: yellow yellow }
