--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ section {
   width: 400 px;
 }
 h1 {
-  color: rgb(235, 235, 11);
+  color: rgb(192, 143, 17);
   text-emphasis-color: ;
 }
 h2 {
@@ -23,4 +23,7 @@ h2 {
 }
 p {
   color: aliceblue;
+}
+nav {
+  color: black;
 }
