--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 body {
-  background-color: rgb(32, 32, 105);
+  background-color: rgb(48, 48, 220);
 }
 .d-flex {
   display: flex;
@@ -24,6 +24,6 @@ h2 {
 p {
   color: aliceblue;
 }
-nav {
+nav a {
   color: black;
 }
