corrected error in code

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ section {
 }
 h1 {
   color: rgb(192, 143, 17);
-  text-emphasis-color: ;
+  text-emphasis-color: 
 }
 h2 {
   color: darkgoldenrod;
