--- a/style3.css
+++ b/style3.css
@@ -14,6 +14,8 @@ tr {
   color: white;
 }
 table{ 
-        width:100 %;
-     border-5px; color: white;}
+        width:100% ;
+     border:-darkgreen ; 
+     color :white;
+    }
  
